Стабильная работа, эффект "градиент", автоматический выбор режима WiFi

--- a/platformio.ini
+++ b/platformio.ini
@@ -17,4 +17,4 @@ lib_deps =
 	ottowinter/ESPAsyncWebServer-esphome@^3.0.0
 	fastled/FastLED@^3.5.0
 	links2004/WebSockets@^2.3.7
-build_unflags = -fno-rtti
+build_unflags = -fno-rtti -fno-exceptions
